--- a/Assign2/app/src/main/res/layout/activity_user_id_view.xml
+++ b/Assign2/app/src/main/res/layout/activity_user_id_view.xml
@@ -32,4 +32,12 @@
         android:inputType="textPersonName"
         tools:layout_editor_absoluteX="91dp"
         tools:layout_editor_absoluteY="112dp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ADD"
+        tools:layout_editor_absoluteX="141dp"
+        tools:layout_editor_absoluteY="411dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
